# ffmpeg_push_pull

./: CMakeLists.txt  README.md  config-bak.ini  config.ini  config.json  main.cpp
include/app/: AITrackingAlgorithm.h  Application.h
include/common/: StreamConfig-bak.h  StreamConfig.h  ThreadPool.h  Watchdog.h  opencv2avframe.h
include/ffmpeg_base/: DecoderModule.h  EncoderModule.h  FFmpegException.h  MultiStreamManager.h  StreamProcessor.h  TrackingStreamProcessor.h
include/logger/: Logger-bak.h  Logger.h
include/mqtt/: mqtt_sync_client.h
include/nlohmann/detail/input/: json_sax.hpp  lexer.hpp
src/app/: AITrackingAlgorithm.cpp  Application.cpp
src/common/: StreamConfig-bak.cpp  StreamConfig.cpp  ThreadPool.cpp  Watchdog.cpp  opencv2avframe.cpp
src/ffmpeg_base/: DecoderModule.cpp  EncoderModule.cpp  FFmpegException.cpp  MultiStreamManager.cpp  StreamProcessor.cpp  TrackingStreamProcessor.cpp
src/logger/: Logger-bak.cpp  Logger.cpp
src/mqtt/: mqtt_sync_client.cpp
